# clarg

./: .gitignore  Cargo.toml  README.md  RELEASING.md
src/: bash_analyzer.rs  blocked_commands.rs  blocked_files.rs  cli.rs  config.rs  hook_input.rs  internalonly.rs  lib.rs  main.rs  output.rs  router.rs  util.rs
tests/: bash_analyzer_tests.rs  blocked_commands_tests.rs  blocked_files_tests.rs  cli_tests.rs  config_tests.rs  hook_input_tests.rs  integration.rs  internalonly_tests.rs  output_tests.rs  router_tests.rs
tests/bash_analyzer_tests/: cd_command.rs  download_commands.rs  eval_and_shell.rs  exec_commands.rs  file_commands.rs  looks_like_path.rs  mod.rs  redirections.rs  search_commands.rs  sed_command.rs  split_shell_operators.rs  unknown_commands.rs
tests/blocked_commands_tests/: construction.rs  mod.rs  reason_messages.rs  regex_matching.rs
tests/blocked_files_tests/: construction.rs  mod.rs  pattern_matching.rs  reason_messages.rs
tests/cli_tests/: combinations.rs  config_path.rs  conflicts.rs  defaults.rs  edge_cases.rs  long_flags.rs  mod.rs  short_flags.rs  version_help.rs
tests/config_tests/: defaults_and_complex.rs  from_cli.rs  from_yaml_basic.rs  from_yaml_errors.rs  from_yaml_patterns.rs  from_yaml_strings.rs  from_yaml_syntax.rs  helpers.rs  mod.rs
tests/hook_input_tests/: claude_tools.rs  complex_scenarios.rs  edge_cases.rs  helper_methods.rs  mod.rs  optional_fields.rs  paths.rs  permission_and_events.rs  required_fields.rs  tool_input.rs  types_and_fields.rs  unicode_and_strings.rs
tests/internalonly_tests/: check_path_containment.rs  (+5 more)
(+14 files in other folders)
