[package]
name = "clarg"
version = "0.1.2"
edition = "2024"

[dependencies]
clap = { version = "4.5.57", features = ["derive"] }
color-eyre = "0.6.5"
eyre = "0.6.12"
ignore = "0.4.25"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
shlex = "1.3.0"

[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"
panic = "abort"

[dev-dependencies]
pty-process = "0.5.3"
serde_json = "1.0.149"
tempfile = "3.24.0"
